[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rabbit-ascii"
version = "0.1.0"
description = "ASCII art animation engine - Python tooling"
authors = ["Austin Wagner"]
packages = [
  { include = "scripts" },
  { include = "tools" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^11.0.0"
imageio = "^2.36.0"
imageio-ffmpeg = "^0.5.1"
av = "^13.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.6.1"
mypy = "^1.15.0"
ruff = "^0.14.0"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
files = ["scripts", "tests", "tools"]
mypy_path = ["."]
explicit_package_bases = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["scripts", "tests", "tools"]
exclude = [".venv", "node_modules", "demos", "bunny", "frames", "originals"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "B", "BLE", "UP", "N", "C4", "SIM", "RET", "C90", "RUF", "ANN"
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any" = { msg = "Do not use typing.Any; prefer precise types or Protocols/TypedDicts." }
"typing.cast" = { msg = "Do not use typing.cast; prefer adapters or precise types." }
"typing.TypeAlias" = { msg = "Do not use TypeAlias; use Literal types or expand unions explicitly." }

[tool.coverage.run]
source = ["scripts", "tools"]
omit = []
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 100
exclude_lines = [
    'if __name__ == "__main__":',
    "sys.exit\\(main\\(\\)\\)",
    # Defensive checks for edge cases that can't occur through normal code paths
    "if stdout is None:",
    "if not line:",
    "if first_frames:",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v -n auto --dist loadscope"
